[project]
name = "unstract-tool-registry"
version = "0.0.1"
description = "Unstract's registry of tools to be used in workflows."
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
# license = {text = "MIT"}

dependencies = [
    "docker~=6.1.3",
    "jsonschema~=4.18.2",
    "PyYAML~=6.0.1",
    "unstract-sdk~=0.70.0",
    # ! IMPORTANT!
    # Local dependencies usually need to be added as:
    # https://pdm-project.org/latest/usage/dependency/#local-dependencies
    #
    # However, local dependencies which are not direct depedency of main project
    # appear as absolute paths in pdm.lock of main project, making it impossible
    # to check in the lock file.
    #
    # Hence instead, add the dependencies without version constraints where the
    # assumption is they are added as direct dependencies in main project itself.
    "unstract-tool-sandbox",
    "unstract-flags",
]

[tool.uv.sources]
unstract-tool-sandbox = { path = "../tool-sandbox", editable = true }
unstract-flags = { path = "../flags", editable = true }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]
