[project]
name = "unstract-tool-registry"
version = "0.0.1"
description = "Unstract's registry of tools to be used in workflows."
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
# license = {text = "MIT"}

dependencies = [
    "docker~=6.1.3",
    "jsonschema>=4.18.6,<5.0",
    "PyYAML~=6.0.1",
    "unstract-sdk~=0.74.0",
    "unstract-tool-sandbox",
    "unstract-flags",
]

[tool.uv.sources]
unstract-tool-sandbox = { path = "../tool-sandbox", editable = true }
unstract-flags = { path = "../flags", editable = true }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]
