[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "unstract-tool-sandbox"
version = "0.0.1"
description = "Unstract Tool Sandbox is a package to communicate with tool worker"
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"},
]
dependencies = [
    "requests==2.31.0",
    # ! IMPORTANT!
    # Local dependencies usually need to be added as:
    # https://pdm-project.org/latest/usage/dependency/#local-dependencies
    #
    # However, local dependencies which are not direct depedency of main project
    # appear as absolute paths in pdm.lock of main project, making it impossible
    # to check in the lock file.
    #
    # Hence instead, add the dependencies without version constraints where the
    # assumption is they are added as direct dependencies in main project itself.
    "unstract-core",
]
requires-python = ">=3.9"
readme = "README.md"
# license = {text = "MIT"}


[tool.pdm.build]
includes = ["src"]
package-dir = "src"
