[project]
name = "unstract-tool-sandbox"
version = "0.0.1"
description = "Unstract Tool Sandbox is a package to communicate with tool worker"
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
# license = {text = "MIT"}

dependencies = [
    "requests==2.31.0",
    # ! IMPORTANT!
    # Local dependencies usually need to be added as:
    # https://pdm-project.org/latest/usage/dependency/#local-dependencies
    #
    # However, local dependencies which are not direct depedency of main project
    # appear as absolute paths in pdm.lock of main project, making it impossible
    # to check in the lock file.
    #
    # Hence instead, add the dependencies without version constraints where the
    # assumption is they are added as direct dependencies in main project itself.
    "unstract-core",
]

[tool.uv.sources]
unstract-core = { path = "../core", editable = true }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]
