[project]
name = "unstract-tool-sandbox"
version = "0.0.1"
description = "Unstract Tool Sandbox is a package to communicate with tool worker"
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
# license = {text = "MIT"}

dependencies = ["requests==2.31.0", "unstract-core"]

[tool.uv.sources]
unstract-core = { path = "../core", editable = true }

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]
