[project]
name = "unstract-worker-general"
version = "1.0.0"
description = "Lightweight Celery worker for general tasks and webhooks"
authors = [
    {name = "Unstract Team", email = "support@unstract.com"},
]
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.12"

dependencies = [
    "celery[redis]>=5.3.0,<6.0.0",
    "kombu>=5.3.0,<6.0.0",
    "requests>=2.31.0,<3.0.0",
    "urllib3>=1.26.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "structlog>=23.1.0,<24.0.0",
    "prometheus-client>=0.17.0,<1.0.0",
    "psutil>=5.9.0,<6.0.0",
    "flask>=2.3.0,<3.0.0",
    "werkzeug>=2.3.0,<3.0.0",
    "tenacity>=8.2.0,<9.0.0",
    "pybreaker>=0.8.0,<1.0.0",
    "orjson>=3.9.0,<4.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "unstract-connectors",
    "unstract-core",
    "unstract-flags",
    "unstract-tool-registry",
    "unstract-tool-sandbox",
    "unstract-workflow-execution",
    "unstract-filesystem",
    "unstract-sdk[azure]>=0.73.1",
    "unstract-workers",
]

[tool.uv.sources]
unstract-workers = { path = "../", editable = true }
unstract-filesystem = { path = "../../unstract/filesystem", editable = true }
unstract-workflow-execution = { path = "../../unstract/workflow-execution", editable = true }
unstract-tool-sandbox = { path = "../../unstract/tool-sandbox", editable = true }
unstract-tool-registry = { path = "../../unstract/tool-registry", editable = true }
unstract-flags = { path = "../../unstract/flags", editable = true }
unstract-core = { path = "../../unstract/core", editable = true }
unstract-connectors = { path = "../../unstract/connectors", editable = true }

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
