[project]
name = "unstract-no-op-vectordb"
version = "0.0.1"
description = "NoOp Vector Database"
authors = [{ name = "Zipstack Inc.", email = "devsupport@zipstack.com" }]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
classifiers = ["Programming Language :: Python"]
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
# source-includes = ["tests"]
